# holder-verifier-demo

./: .gitignore  Cargo.toml  README.md  run.sh
holder/: Cargo.toml
holder/src/: main.rs
verifier/: Cargo.toml
verifier/src/: client.rs  main.rs  state.rs
